# treads

./: .gitignore  DYNAMIC_TEMPLATING.md  README.md  app.py  create_agent.py  main.py  nanobot_global.yaml  nanobot_template_util.py  prompts.py  pyproject.toml
nano_rails/: tread_manage.py
nano_rails/agent_template/: prompt.py  tools.py
nano_rails/project_template/: README.md
nano_rails/project_template/templates/: base.html
templates/: base.html
treads/: tread_manage.py
treads/agent_template/: agent.py  config.py  nanobot.yaml  prompts.py  resources.py  tools.py
treads/agent_template/templates/: app.tmpl  base.html  prompt_form.tmpl  prompt_form_modal.tmpl  prompts.tmpl  resource_template_form.tmpl  resource_template_form_modal.tmpl  resource_templates.tmpl
treads/api/: __init__.py  fastapp.py  helper.py  lifespan.py  nanobot_template_util.py  routers.py
treads/api/routers/: __init__.py  mcp.py  tread.py
treads/app_agent_template/: __init__.py  nanobot.yaml  prompts.py  resources.py  tools.py
treads/app_agent_template/templates/: app.tmpl  base.html  prompt_form_modal.tmpl  prompts.tmpl  resource_templates.tmpl
treads/config/: __init__.py  loader.py
treads/nanobot/: client.py
treads/project_template/: app.py  nanobot_global.yaml  nanobot_template_util.py  pyproject.toml  server.py
treads/project_template/static/: styles.css
treads/project_template/templates/: _chat_box.html  _custom_styles.html  _prompts_list.html  _tools_list.html  _widgets.html  base.html
treads/types/: __init__.py  agent.py
treads/views/: custom_filters_example.py  handlers.py  jinja_env.py  services.py  template_utils.py  types.py
