[project]
name = "treads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.3.5",
    "jinja2>=3.1.6",
    "openai>=1.79.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
create_agent = "treads.tread_manage:create_agent"
create_project = "treads.tread_manage:create_project"

[tool.setuptools]
packages = ["treads"]
include-package-data = true

[tool.setuptools.package-data]
treads = [
    "project_template/*",
    "project_template/**/*",
    "agent_template/*",
    "agent_template/**/*"
]
