[project]
name = "treads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.5.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2"
]

[project.scripts]
create_agent = "treads.tread_manage:create_agent"
create_project = "treads.tread_manage:create_project"
dev = "treads.tread_manage:dev"

[tool.setuptools]
packages = ["treads", "treads.api"]
include-package-data = true

[tool.setuptools.package-data]
treads = [
    "project_template/*",
    "project_template/**/*",
    "agent_template/*",
    "agent_template/**/*",
    "app_agent_template/*",
    "app_agent_template/**/*",
]
